--- a/index.html
+++ b/index.html
@@ -29,50 +29,49 @@
       referrerpolicy="no-referrer" />
   </head>
   <body>
-    <header class="container">
-      <img
-        src="images/logo.svg"
-        alt="huddle logo"
-        class="logo" />
-    </header>
-
-    <main class="container hero">
-      <img
-        src="images/illustration-mockups.svg"
-        alt="illustrations mockups" />
-
-      <section class="hero-text">
-        <h1>Build The Community Your Fans Will Love</h1>
-        <p>
-          Huddle re-imagines the way we build communities. You have a voice, but
-          so does your audience. Create connections with your users as you
-          engage in genuine discussion.
-        </p>
-        <a
-          href="#"
-          class="btn btn-primary">
-          Register
-        </a>
+    <main>
+      <header class="container">
+        <img
+          src="images/logo.svg"
+          alt="huddle logo"
+          class="logo" />
+      </header>
+      <section class="container hero">
+        <img
+          src="images/illustration-mockups.svg"
+          alt="illustrations mockups" />
+        <section class="hero-text">
+          <h1>Build The Community Your Fans Will Love</h1>
+          <p>
+            Huddle re-imagines the way we build communities. You have a voice, but
+            so does your audience. Create connections with your users as you
+            engage in genuine discussion.
+          </p>
+          <a
+            href="#"
+            class="btn btn-primary">
+            Register
+          </a>
+        </section>
       </section>
+      <footer class="container">
+        <ul class="social-links">
+          <li>
+            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+          </li>
+        </ul>
+      </footer>
+      <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/js/all.min.js"
+        integrity="sha512-2bMhOkE/ACz21dJT8zBOMgMecNxx0d37NND803ExktKiKdSzdwn+L7i9fdccw/3V06gM/DBWKbYmQvKMdAA9Nw=="
+        crossorigin="anonymous"
+        referrerpolicy="no-referrer"></script>
+        </body>
     </main>
-    <footer class="container">
-      <ul class="social-links">
-        <li>
-          <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-        </li>
-        <li>
-          <a href="#"><i class="fa-brands fa-twitter"></i></a>
-        </li>
-        <li>
-          <a href="#"><i class="fa-brands fa-instagram"></i></a>
-        </li>
-      </ul>
-    </footer>
-
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/js/all.min.js"
-      integrity="sha512-2bMhOkE/ACz21dJT8zBOMgMecNxx0d37NND803ExktKiKdSzdwn+L7i9fdccw/3V06gM/DBWKbYmQvKMdAA9Nw=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"></script>
-  </body>
 </html>
